--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-hola
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <body></body>
+    <script src="build/pages.js"></script>
+</html>
