added quotes to publications

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <dt>2015</dt>
                     <dd>
                         <p>
-                            Villaveces, JM et al. "<strong>Merging and scoring molecular interactions utilising existing community standards: tools, use-cases and a case study.</strong>
+                            Villaveces, JM et al. "<strong>Merging and scoring molecular interactions utilising existing community standards: tools, use-cases and a case study.</strong>"
                             <i>Database</i> 2015 (2015): bau131.
                         </p>
                     </dd>
@@ -189,7 +189,7 @@
                     <dt>2014</dt>
                     <dd>
                         <p>
-                            Wagner, I et al. "<strong>morFeus: a web-based program to detect remotely conserved orthologs using symmetrical best hits and orthology network scoring.</strong>
+                            Wagner, I et al. "<strong>morFeus: a web-based program to detect remotely conserved orthologs using symmetrical best hits and orthology network scoring.</strong>"
                             <i>BMC bioinformatics</i> 15.1 (2014): 263.
 .
                         </p>
@@ -198,7 +198,7 @@
                     <dt>2014</dt>
                     <dd>
                         <p>
-                            Villaveces, JM et al. "<strong>KEGGViewer, a BioJS component to visualize KEGG Pathways.</strong>
+                            Villaveces, JM et al. "<strong>KEGGViewer, a BioJS component to visualize KEGG Pathways.</strong>"
                             <i>F1000Research</i> 3 (2014).
 .
                         </p>
@@ -207,7 +207,7 @@
                     <dt>2014</dt>
                     <dd>
                         <p>
-                            Villaveces, JM et al. "<strong>PsicquicGraph, a BioJS component to visualize molecular interactions from PSICQUIC servers.</strong>
+                            Villaveces, JM et al. "<strong>PsicquicGraph, a BioJS component to visualize molecular interactions from PSICQUIC servers.</strong>"
                             <i>F1000Research</i> 3 (2014).
 .
                         </p>
@@ -216,7 +216,7 @@
                     <dt>2014</dt>
                     <dd>
                         <p>
-                            Corpas, M et al. "<strong>BioJS: an open source standard for biological visualisation–its status in 2014.</strong>
+                            Corpas, M et al. "<strong>BioJS: an open source standard for biological visualisation–its status in 2014.</strong>"
                             <i>F1000Research</i> 3 (2014).
 .
                         </p>
@@ -225,7 +225,7 @@
                     <dt>2013</dt>
                     <dd>
                         <p>
-                            Jimenez, R et al. "<strong>iAnn: an event sharing platform for the life sciences.</strong>
+                            Jimenez, R et al. "<strong>iAnn: an event sharing platform for the life sciences.</strong>"
                             <i>Bioinformatics</i> 29.15 (2013): 1919-1921.
                         </p>
                     </dd>
@@ -233,7 +233,7 @@
                     <dt>2013</dt>
                     <dd>
                         <p>
-                            G&oacute;mez, J et al. "<strong>BioJS: an open source JavaScript framework for biological data visualization.</strong>
+                            G&oacute;mez, J et al. "<strong>BioJS: an open source JavaScript framework for biological data visualization.</strong>"
                             <i>Bioinformatics</i> (2013): btt100.
                         </p>
                     </dd>
@@ -241,7 +241,7 @@
                     <dt>2011</dt>
                     <dd>
                         <p>
-                            Villaveces, JM et al. "<strong>Dasty3, a WEB framework for DAS.</strong>
+                            Villaveces, JM et al. "<strong>Dasty3, a WEB framework for DAS.</strong>"
                             <i>Bioinformatics</i> 27.18 (2011): 2616-2617.
                         </p>
                     </dd>
@@ -249,7 +249,7 @@
                     <dt>2010</dt>
                     <dd>
                         <p>
-                            Castro, A et al. "<strong>OLS2OWL. A repository management facility.</strong>
+                            Castro, A et al. "<strong>OLS2OWL. A repository management facility.</strong>"
                             <i>International Protege Conference</i> 2009.
                         </p>
                     </dd>
