--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@
                     <dt>2015</dt>
                     <dd>
                         <p>
+                            Villaveces, JM et al. "<strong>Tools for visualization and analysis of molecular networks, pathways, and -omics data.</strong>"
+                            <i> Advances and Applications in Bioinformatics and Chemistry</i> 8 (2015).
+                        </p>
+                    </dd>
+                    
+                    <dt>2015</dt>
+                    <dd>
+                        <p>
                             Villaveces, JM et al. "<strong>Merging and scoring molecular interactions utilising existing community standards: tools, use-cases and a case study.</strong>"
                             <i>Database</i> 2015 (2015): bau131.
                         </p>
