--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>JMV CV</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="dist/css/bootstrap.min.css" type="text/css">
