--- a/index.html
+++ b/index.html
@@ -420,13 +420,13 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    morFeus
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!--<div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
                         <img src="dist/img/portfolio/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -470,7 +470,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
