--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-md-offset-2 col-md-4 text-center"><b>Universidad de La Sabana</b> <br> 2004 - 2019</div>
+                <div class="col-md-offset-2 col-md-4 text-center"><b>Universidad de La Sabana</b> <br> 2004 - 2009</div>
                 <div class="col-md-6 text-justify"><b class="text-center">Bachelor - Informatics Eingeneering</b><br></div>
             </div>
         </div>
@@ -490,10 +490,10 @@
                     <hr class="primary">
                     <!--<p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>-->
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <!--<div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
                     <p>123-456-6789</p>
-                </div>
+                </div>-->
                 <div class="col-lg-4 text-center">
                     <a href="https://goo.gl/7lhgnC" target="_blank"><i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
                     <p><a href="https://goo.gl/7lhgnC" target="_blank">Linkedin</a></p>
