--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@
                     <a href="https://github.com/jmvillaveces/" target="_blank"><i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
                     <p><a href="https://github.com/jmvillaveces/" target="_blank">Github</a></p>
                 </div>
+                <div class="col-lg-4 text-center">
+                    <a href="mailto:%76%69%6c%6c%61%76%65%63%65%73@%62%69%6f%63%68%65%6d.%6d%70%67.%64%65" target="_blank"><i class="fa fa-envelope fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
+                    <p><a href="mailto:%76%69%6c%6c%61%76%65%63%65%73@%62%69%6f%63%68%65%6d.%6d%70%67.%64%65" target="_blank">Email</a></p>
+                </div>
             </div>
         </div>
     </section>
