--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
-                        <img src="dist/img/portfolio/1.jpg" class="img-responsive" alt="">
+                        <img src="dist/img/portfolio/mito_models.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Visualization
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mito Models
                                 </div>
                             </div>
                         </div>
@@ -415,75 +415,30 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Visualization
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Interaction Atlas
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="dist/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <a href="https://github.com/jmvillaveces/biojs-vis-keggviewer" target="_blank" class="portfolio-box">
+                        <img src="dist/img/portfolio/kegg.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Visualization
                                 </div>
                                 <div class="project-name">
-                                    morFeus
+                                    Kegg Viewer
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <!--<div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="dist/img/portfolio/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="dist/img/portfolio/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="dist/img/portfolio/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>-->
             </div>
         </div>
         
