--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://jmvillaveces.github.io/mito_models_visualization/dist/" class="portfolio-box">
                         <img src="dist/img/portfolio/mito_models.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -410,7 +410,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://jmvillaveces.github.io/iAtlas-web/dist/" class="portfolio-box">
                         <img src="dist/img/portfolio/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
