fixed bouncing ball

--- a/index.html
+++ b/index.html
@@ -79,12 +79,9 @@
                 <h1>Jos&eacute; Mar&iacute;a Villaveces</h1>
                 <hr>
                 <p><b>Software Developer and PhD Candidate</b></p>
-                <div class="wow pulse animated" data-wow-duration="2s" data-wow-iteration="100">
-                    <i style="font-size:75px;width:100px;height:100px;" class="fa fa-arrow-circle-o-down"></i>
-                </div>
-                
             </div>
         </div>
+        <i style="font-size:75px;width:100px;height:100px;" class="bounce fa fa-arrow-circle-o-down"></i>
     </header>
 
     <section class="bg-primary" id="profile">
