changed languages bkg

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
     </section>-->
 
-    <section id="languages">
+    <section class="bg-gray" id="languages">
 
       <div class="container">
 
