removed unused js imports

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css" type="text/css">
 
-    <!-- Animate CSS
-    <link rel="stylesheet" href="dist/css/animate.min.css" type="text/css">-->
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="dist/css/creative.css" type="text/css">
+
+    <!-- Wow JS -->
+    <script src="dist/lib/wow.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -83,8 +83,8 @@
     <section class="bg-primary" id="profile">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class=" section-heading wow bounceIn"><i class="fa fa-x fa-user"></i> Profile</h2>
+                <div class="col-lg-8 col-lg-offset-2 text-center wow slideInUp">
+                    <h2 class=" section-heading"><i class="fa fa-x fa-user"></i> Profile</h2>
                     <hr class="light">
                     <p class="text-faded text-justify">Computational biology PhD with an acute interest in data integration and visualization and how these two concepts can be used to unveil data stories.</p>
                 </div>
@@ -93,7 +93,7 @@
     </section>
 
     <section id="experience">
-        <div class="container">
+        <div class="container wow fadeInUp">
           <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
             <h2 class="section-heading text-center" style="visibility: visible;">Experience</h2>
@@ -368,7 +368,7 @@
 
         <div class="row" style="margin-top: 70px">
           <div class="col-lg-12 text-center">
-              <h2 class=" section-heading wow bounceIn"><i class="fa fa-x fa-language"></i> Languages</h2>
+              <h2 class=" section-heading"><i class="fa fa-x fa-language"></i> Languages</h2>
               <hr class="primary">
           </div>
           <div class="col-lg-8 col-lg-offset-2">
@@ -416,7 +416,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class=" section-heading wow bounceIn"><i class="fa fa-x fa-folder-o"></i> Portfolio</h2>
+                        <h2 class=" section-heading"><i class="fa fa-x fa-folder-o"></i> Portfolio</h2>
                         <hr class="primary">
                     </div>
                 </div>
@@ -484,7 +484,7 @@
     </section>
 
     <section id="contact">
-        <div class="container">
+        <div class="container wow slideInUp">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
@@ -496,26 +496,20 @@
                     <p>123-456-6789</p>
                 </div>-->
                 <div class="col-lg-4 text-center">
-                    <a href="https://goo.gl/7lhgnC" target="_blank"><i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
+                    <a href="https://goo.gl/7lhgnC" target="_blank"><i class="fa fa-linkedin-square fa-3x" ></i></a>
                     <p><a href="https://goo.gl/7lhgnC" target="_blank">Linkedin</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <a href="https://github.com/jmvillaveces/" target="_blank"><i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
+                    <a href="https://github.com/jmvillaveces/" target="_blank"><i class="fa fa-github-alt fa-3x" ></i></a>
                     <p><a href="https://github.com/jmvillaveces/" target="_blank">Github</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <a href="mailto:%76%69%6c%6c%61%76%65%63%65%73@%62%69%6f%63%68%65%6d.%6d%70%67.%64%65" target="_blank"><i class="fa fa-envelope fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
+                    <a href="mailto:%76%69%6c%6c%61%76%65%63%65%73@%62%69%6f%63%68%65%6d.%6d%70%67.%64%65" target="_blank"><i class="fa fa-envelope fa-3x wow bounceIn" ></i></a>
                     <p><a href="mailto:%76%69%6c%6c%61%76%65%63%65%73@%62%69%6f%63%68%65%6d.%6d%70%67.%64%65" target="_blank">Email</a></p>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- jQuery -->
-    <script src="dist/lib/jquery.js"></script>
-    <script src="dist/lib/jquery.easing.min.js"></script>
-    <script src="dist/lib/jquery.fittext.js"></script>
-    <script src="dist/lib/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="dist/app.js"></script>
