--- a/index.html
+++ b/index.html
@@ -379,22 +379,22 @@
 
                     <li>
                       <h4>English - <small>Full Professional profiency (IELTS score 7)</small></h4>
-                      <div class="progress libs">
-                        <div class="percentage libs" style="width: 100%;"></div>
+                      <div class="progress dev">
+                        <div class="percentage dev" style="width: 100%;"></div>
                       </div>
                     </li>
 
                     <li>
                       <h4>Spanish - <small>Native Speaker</small></h4>
-                      <div class="progress libs">
-                        <div class="percentage libs" style="width: 100%;"></div>
+                      <div class="progress dev">
+                        <div class="percentage dev" style="width: 100%;"></div>
                       </div>
                     </li>
 
                     <li>
                       <h4>German - <small>Way stage or elementary (A2)</small></h4>
-                      <div class="progress  libs">
-                        <div class="percentage libs" style="width: 80%;"></div>
+                      <div class="progress  dev">
+                        <div class="percentage dev" style="width: 80%;"></div>
                       </div>
                     </li>
 
@@ -409,78 +409,35 @@
     </section>
 
 
-    <section id="portfolio">
-
-
-        <aside class="bg-dark">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class=" section-heading"><i class="fa fa-x fa-folder-o"></i> Portfolio</h2>
-                        <hr class="primary">
-                    </div>
-                </div>
-                <div class="call-to-action">
-                </div>
+    <section id="portfolio" class="bg-dark">
+      <div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class=" section-heading"><i class="fa fa-x fa-folder-o"></i> Portfolio</h2>
+                <hr class="primary">
             </div>
-        </aside>
 
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://jmvillaveces.github.io/mito_models_visualization/dist/" class="portfolio-box">
-                        <img src="dist/img/portfolio/mito_models.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Visualization
-                                </div>
-                                <div class="project-name">
-                                    Mito Models
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://jmvillaveces.github.io/iAtlas-web/dist/" class="portfolio-box">
-                        <img src="dist/img/portfolio/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Visualization
-                                </div>
-                                <div class="project-name">
-                                    Interaction Atlas
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://github.com/jmvillaveces/biojs-vis-keggviewer" target="_blank" class="portfolio-box">
-                        <img src="dist/img/portfolio/kegg.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Visualization
-                                </div>
-                                <div class="project-name">
-                                    Kegg Viewer
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+            <div class="row">
+              <div class="col-md-4 portfolio-item">
+                  <a href="https://jmvillaveces.github.io/mito_models_visualization/dist/">
+                      <img class="img-responsive" src="dist/img/portfolio/mito_models.png" alt="">
+                  </a>
+              </div>
+              <div class="col-md-4 portfolio-item">
+                  <a href="http://jmvillaveces.github.io/ChurnViz/">
+                      <img class="img-responsive" src="dist/img/portfolio/churn.png" alt="">
+                  </a>
+              </div>
+              <div class="col-md-4 portfolio-item">
+                  <a href="#">
+                      <img class="img-responsive" src="dist/img/portfolio/2.jpg" alt="">
+                  </a>
+              </div>
             </div>
+          </div>
         </div>
-
-        <aside class="bg-dark">
-            <div class="container text-center">
-                <div class="call-to-action">
-                </div>
-            </div>
-        </aside>
+      </div>
     </section>
 
     <section id="contact">
